MER-113 Stworzenie podstaw pod observability (micrometer+prometheus+grafana), edycja konfiguracji dockera